--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,8 @@
                 <div class="input">
                     <label for="userId">User Id:</label>
                     <input type="text" id="userId">
+                    <label for="chatId">Chat Id:</label>
+                    <input type="text" id="chatId">
                     <br><text>Parallel Processing: </text>
                     <select name="multiRegion" id="multiRegion">
                         <option value="disable" selected>Disable</option>
