--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,8 @@
                     <input type="text" id="userId">
                     <label for="chatId">Chat Id:</label>
                     <input type="text" id="chatId">
+                    <label for="receiverId">Receiver Id:</label>
+                    <input type="text" id="receiverId">
                     <br><text>Parallel Processing: </text>
                     <select name="multiRegion" id="multiRegion">
                         <option value="disable" selected>Disable</option>
