--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header> 
-            <h1>LLM Chatbot</h1>
+            <h1>Live Conversation</h1>
         </header>
         <section class="container">
             <form id="my-form">
@@ -31,11 +31,9 @@
                     </select>
                     <br><text>Conversation Type: </text>
                     <select name="conversationType" id="convtype">
-                        <option type="text" value="normal" selected>1. General Conversation</option>
+                        <option type="text" value="normal" selected>1. Live Conversation</option>
                         <option value="agent-executor">3-1. Agentic RAG (LangGraph)</option>
-                        <option value="agent-executor-chat">3-2. Agentic RAG Chat (LangGraph)</option>    
-                        <option value="translation">4-1. Translation</option>
-                        <option value="grammar">4-2. Grammatical Error Correction</option>                                                          
+                        <option value="agent-executor-chat">3-2. Agentic RAG Chat (LangGraph)</option>                            
                     </select>
                 </div>
                 <input class="btn" type="submit" value="Submit">                
